# share-your-photos

./: .gitignore  flake.nix  readme.md  share-your-photos.nix  shareyourphotos.cabal
app/: Main.hs  test_file.txt
extension/: animation.html  animation.js  animation_old.js  hello.html  manifest.json  popup.html  popup.js  slideshow.html  slideshow.js
extension/scripts/: background.js  content.js
src/: ShareYourPhotos.hs
