cabal-version: 2.2

name: shareyourphotos
version: 0.1.0.0

common common
  build-depends:
      base >= 4.14
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: ShareYourPhotos
  build-depends:
      base >= 4.7 && < 5
      , text
      , websockets ^>=0.12
      , wai-websockets ^>=3.0
      , wai ^>=3.2
      , wai-app-static ^>=3.1
      , warp ^>=3.3
      , wai-cors

  default-extensions:
    ImportQualifiedPost
    DeriveGeneric

executable shareyourphotos
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      shareyourphotos
