cabal-version: 2.4
name: shareyourphotos
version:  0.1.0.0
build-type: Simple

executable shareyourphotos
  hs-source-dirs: app
  main-is:  Main.hs
  build-depends:
        base >=4.7 && <5
        , aeson
        , scotty
        , text
        , bytestring
        , http-types
        , tagsoup
        , containers

  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
